[gd_scene load_steps=5 format=3 uid="uid://cxwgvus7rx8a1"]

[ext_resource type="Texture2D" uid="uid://b45mgd4upxqp1" path="res://assets/icons/left_arrow.svg" id="1_50v6p"]
[ext_resource type="Texture2D" uid="uid://dihx24ig13tcm" path="res://assets/icons/right_arrow.svg" id="2_pp38h"]
[ext_resource type="Script" uid="uid://c7wfe4f6htv5i" path="res://scripts/avatar_select/AvatarSelect.gd" id="18_xrsmk"]
[ext_resource type="Script" uid="uid://b5qw6eyghlu2j" path="res://scripts/avatar_select/UI.gd" id="19_1vhfg"]

[node name="AvatarSelect" type="Node3D"]
script = ExtResource("18_xrsmk")

[node name="Preview" type="Node3D" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Preview"]

[node name="Camera3D" type="Camera3D" parent="Preview"]
transform = Transform3D(1, 0, 0, 0, 0.999999, 0.00143117, 0, -0.00143117, 0.999999, 0, 1.07158, 1.10954)
current = true

[node name="ModelPlaceholder" type="Node3D" parent="Preview"]

[node name="ModelController" type="Node3D" parent="Preview"]

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("19_1vhfg")

[node name="Panel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -202.0
grow_horizontal = 2
grow_vertical = 0

[node name="LeftPanel" type="Panel" parent="UI/Panel"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2

[node name="LeftButton" type="TextureButton" parent="UI/Panel/LeftPanel"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -25.0
offset_bottom = 25.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 6
texture_normal = ExtResource("1_50v6p")
stretch_mode = 0

[node name="BackButton" type="Button" parent="UI/Panel/LeftPanel"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -31.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 10
text = "Back"

[node name="CenterPanel" type="Panel" parent="UI/Panel"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HeaderLabel" type="Label" parent="UI/Panel/CenterPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -61.5
offset_right = 61.5
offset_bottom = 23.0
grow_horizontal = 2
text = "Model Selection"

[node name="UploadButton" type="Button" parent="UI/Panel/CenterPanel"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -43.0
grow_horizontal = 2
grow_vertical = 0
text = "Upload a Model"

[node name="ModelRichTextLabel" type="RichTextLabel" parent="UI/Panel/CenterPanel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.386
anchor_bottom = 0.386
offset_top = -16.972
offset_right = 302.0
offset_bottom = 29.028
grow_horizontal = 2
grow_vertical = 2

[node name="RightPanel" type="Panel" parent="UI/Panel"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -183.0
grow_horizontal = 0
grow_vertical = 2

[node name="RightButton" type="TextureButton" parent="UI/Panel/RightPanel"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
grow_vertical = 2
texture_normal = ExtResource("2_pp38h")
stretch_mode = 0

[node name="ChooseButton" type="Button" parent="UI/Panel/RightPanel"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -37.0
grow_horizontal = 2
grow_vertical = 0
text = "Choose Model"
